
name:                savings-vault
version:             0.1.0.0
license:             Apache-2.0
author:              AuraVault
build-type:          Simple
cabal-version:       >=1.10

executable compile-vault
  main-is:             Main.hs
  other-modules:       SavingsVault
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , cardano-api
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , serialise
  hs-source-dirs:      src
  default-language:    Haskell2010
